--- a/css/styles.css
+++ b/css/styles.css
@@ -24,9 +24,10 @@ body {
 
 /* Services Section */
 .services {
-  padding: 50px 20px;
+  padding: 40px 20px;
   max-width: 800px;
   margin: auto;
+  text-align: left;
 }
 
 .services h2 {
@@ -37,7 +38,8 @@ body {
 
 .services p {
   font-size: 1.1em;
-  margin-bottom: 20px;
+  margin-bottom: 1.2em;
+  text-align: left;
 }
 
 .services ul {
